Add adam_lopez, Fix artist images, Fix mistyped artist headings

--- a/MILESTONE 2/about_us.html
+++ b/MILESTONE 2/about_us.html
@@ -54,7 +54,7 @@
 			<div id="side-nav">
 				<ul>
 					<!-- Currently Only 2013 REPORT works as I wanted to have an example for every part of the website and ran out of time to complete the other pages -->
-					<li><a href="../about_us.html">ABOUT US</a></li>	
+					<li><a href="about_us.html">ABOUT US</a></li>	
 					<li><a href="#">2007 REPORT</a></li>				
 					<li><a href="#">2008 REPORT</a></li>
 					<li><a href="#">2009 REPORT</a></li>
