--- a/MILESTONE 2/artists.html
+++ b/MILESTONE 2/artists.html
@@ -113,7 +113,7 @@
 					</div>
 					<div class="summary">
 						<h3 class="name">Adam Lopez</h3>
-						<p class="info">Adam Lopez’s has performed backing vocals for famous artists such as Mariah Carey, Keith Urban, and The Coors. His phenomenal vocal range has led him to break two Guinness World Records. This has allowed him to appear all over world performing . . .</p>
+						<p class="info">Adam Lopez’s has performed backing vocals for famous artists such as Mariah Carey, Keith Urban, and The Coors. His phenomenal vocal range has led him to break two Guinness World Records. This has allowed him to appear all over the world . . .</p>
 					</div>
 					<a class="remove-link-lines" href="#"><div class="go-to-artist-btn">
 						<p>Visit the Artist's Page</p>
