--- a/MILESTONE 2/artists/adam_lopez.html
+++ b/MILESTONE 2/artists/adam_lopez.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Raymond Yong - Barrier Reef Orchestra</title>
+	<title>Adam Lopez - Barrier Reef Orchestra</title>
 	<link href="../mainstyles.css" rel="stylesheet" type="text/css">
 	<link href="../artiststyles.css" rel="stylesheet" type="text/css">
 	
@@ -46,7 +46,7 @@
 			<ul>
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../artists.html">Our Team - Artists</a></li>
-				<li>Raymond Yong</li>
+				<li>Adam Lopez</li>
 			</ul>
 		</nav>
 	</header>
@@ -54,35 +54,37 @@
 		<div id="main-content">
 			<section id="individual-artist">
 				<section id="image-name-role">
-					<h2>Raymond Yong</h2>
-					<img src="../artist_images/artist_overview/raymond_yong_large.jpg" width="280" height="225">
-					<h3>Conductor</h3>
+					<h2>Adam Lopez</h2>
+					<img src="../artist_images/artist_overview/adam_lopez_large.jpg" width="280" height="225">
+					<h3>Musician - Vocals</h3>
 				</section>	<!-- End of Image Section -->
 				<article id="about-the-artist">
 					<section>
-						<h4 class="article-head">About Raymond Yong</h4>
-						<p>Raymond Yong was born in Malaysia, emigrating to Australia at the age of two. He received his inital musical training in Perth, performing regularly in public piano recitals from an early age. It was in High School that he first took to the podium as a conductor.</p>
-						<p>Raymond went on to study conducting at the University of Melbourne as a pupil of the late John Hopkins and received further training in the Symphony Australia Young Development Programme. He became the Music Director of the Victorian Youth Symphony Orchestra and was the Founding Director of Orchestra 21.</p>
-						<p>He has been a regular guest with the <a href="../index.html">Barrier Reef Orchestra</a> since 2011, conducting the orchestra, performing as a piano soloist, and providing workshops on conducting to student in Townsville.</p>	
+						<h4 class="article-head">About Adam Lopez</h4>
+						<p>Adam Lopez's has performed backing vocals for famous artists such as Mariah Carey, Keith Urban, and The Coors. His most recent noted collaboration was headlining with the Australian Jazz legend James Morrison in a string of Symphonic Concerts in Perth, Hobart, and Brisbane.</p>
+						<p>His discography includes an eclectic collection of genres spanning Pop-Opera, Pop, Rhythm &amp; Blues, Jazz, and Power Ballards.</p>
+						<p>Adam Lopez's vocal range allow him to achieve two Guinness World Records (one not above the range of a piano). This achievement has led him to performing all over the world including countries such as Japan, Spain, Italy, Korea, and the USA</p>
 					</section>
 					<section id="performances">
-						<h4 class="article-head">Raymond's Barrier Reef Orchestra Performances</h4>
+						<h4 class="article-head">Adam's Barrier Reef Orchestra Performances</h4>
 						<div class="event even">
 							<div class="title-location-date">
-								<h3 class="title">Sounds of Romance</h3>
+								<h3 class="title">World of Music</h3>
 								<h4 class="location">Townsville Civic Theatre</h4>
-								<h4 class="date">Was 29th March, 2015</h4>
+								<h4 class="date">5th September, 8pm</h4>
 							</div>
 							<div class="artists">
 								<h4>Special Guests</h4>
 								<ul>
-									<li>Jennifer Bradstreet</li>
-									<li>Leah Li</li>
+									<li><a href="adam_lopez.html">Adam Lopez</a></li>
+									<li>Domenico Taraborrelli</li>
+									<li>David Hudson</li>
+									<li>Andrew Ryder</li>
 								</ul>
 							</div>
 							<div class="buttons">
-								<a href="../events/sounds_of_romance.html"><button type="button">Learn More</button></a>
-								<a href="#"><button type="button" class="bottombutton">Event Has No Gallery</button></a>
+								<a href="../events/world_of_music.html"><button type="button">Learn More</button></a>
+								<a href="#"><img src="../button_images/ticket_shop_small.png" class="bottombutton"></a>
 							</div>	<!-- End of Buttons -->
 						</div> 	<!-- End of Event -->
 					</section>	<!-- End of Performances -->				
