--- a/MILESTONE 2/artists/stefan_cassomenos.html
+++ b/MILESTONE 2/artists/stefan_cassomenos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Raymond Yong - Barrier Reef Orchestra</title>
+	<title>Stefan Cassomenos - Barrier Reef Orchestra</title>
 	<link href="../mainstyles.css" rel="stylesheet" type="text/css">
 	<link href="../artiststyles.css" rel="stylesheet" type="text/css">
 	
@@ -46,7 +46,7 @@
 			<ul>
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../artists.html">Our Team - Artists</a></li>
-				<li>Raymond Yong</li>
+				<li>Stefan Cassomenos</li>
 			</ul>
 		</nav>
 	</header>
@@ -54,34 +54,34 @@
 		<div id="main-content">
 			<section id="individual-artist">
 				<section id="image-name-role">
-					<h2>Raymond Yong</h2>
-					<img src="../artist_images/artist_overview/raymond_yong_large.jpg" width="280" height="225">
-					<h3>Conductor</h3>
+					<h2>Stefen Cassomenos</h2>
+					<img src="../artist_images/artist_overview/stefan_cassomenos_large.jpg" width="280" height="225">
+					<h3>Musician - Piano</h3>
 				</section>	<!-- End of Image Section -->
 				<article id="about-the-artist">
 					<section>
-						<h4 class="article-head">About Raymond Yong</h4>
-						<p>Raymond Yong was born in Malaysia, emigrating to Australia at the age of two. He received his inital musical training in Perth, performing regularly in public piano recitals from an early age. It was in High School that he first took to the podium as a conductor.</p>
-						<p>Raymond went on to study conducting at the University of Melbourne as a pupil of the late John Hopkins and received further training in the Symphony Australia Young Development Programme. He became the Music Director of the Victorian Youth Symphony Orchestra and was the Founding Director of Orchestra 21.</p>
-						<p>He has been a regular guest with the <a href="../index.html">Barrier Reef Orchestra</a> since 2011, conducting the orchestra, performing as a piano soloist, and providing workshops on conducting to student in Townsville.</p>	
+						<h4 class="article-head">About Stefen Cassomenos</h4>
+						<p>Melbourne pianist, conductor and composer Stefan Cassomenos gives regular solo recitals throughout Australia, and has appeared as a soloist in Europe and Asia. He performed the premiere of his own first piano concerto with the Adelaide Symphony Orchestra at the age of 16, and directed the 2010 Melbourne Recictal Centre premiere of his third piano concerto. He studied under with Margarita Krupina and subsequently with Stephen McIntyre on scholarship at the University of Melbourne.</p>
+						<p>In 2012 he was grand finalist in the Rhodes International Piano Competition, and his recording of English and Australian art song was named the ABC Calssic FM CD of the week. Additionally, he was the grand finalist for and prize-winner at both the Trieste International Chamber Music Competition and the Melbourne Asia-Pacific Chamber Music Competition in 2009.</p>
+						<p>He has worked as an artistic director of many festivals, projects and collaborations including the Melba Festival and Melbourne's Piano Landmakrs festival. The compositions of Stefan Cassomenos have been played by the Melbourne and Adelaide Symphony Orchestras.</p>
 					</section>
 					<section id="performances">
-						<h4 class="article-head">Raymond's Barrier Reef Orchestra Performances</h4>
+						<h4 class="article-head">Stefan's Barrier Reef Orchestra Performances</h4>
 						<div class="event even">
 							<div class="title-location-date">
-								<h3 class="title">Sounds of Romance</h3>
+								<h3 class="title">Masterworks</h3>
 								<h4 class="location">Townsville Civic Theatre</h4>
-								<h4 class="date">Was 29th March, 2015</h4>
+								<h4 class="date">Was 6th September, 2014</h4>
 							</div>
 							<div class="artists">
 								<h4>Special Guests</h4>
 								<ul>
-									<li>Jennifer Bradstreet</li>
-									<li>Leah Li</li>
+									<li>Mark Shiel</li>
+									<li><a href="stefan_cassomenos.html">Stefan Cassomenos</a></li>
 								</ul>
 							</div>
 							<div class="buttons">
-								<a href="../events/sounds_of_romance.html"><button type="button">Learn More</button></a>
+								<a href="../events/masterworks.html"><button type="button">Learn More</button></a>
 								<a href="#"><button type="button" class="bottombutton">Event Has No Gallery</button></a>
 							</div>	<!-- End of Buttons -->
 						</div> 	<!-- End of Event -->
