--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -55,7 +55,7 @@
 						<p class="announcement-info">The president Andrew Ryder discusses the Orchestra's recent success, the new life members and their impact on the Orchestra, and the conducting workshop hosted by Raymond Yong.</p>
 					</section>	<!-- End of Info Box -->
 					<aside class="expiry-date">
-						<p>Expires: 31/08/20??</p>
+						<p>Expires: 31/08/2014</p>
 					</aside>
 					<a href="announcements/august_newsletter.html"><button type="button" class="announce-btn">Go To Announcement</button></a>
 				</div>
@@ -65,7 +65,7 @@
 						<p class="announcement-info">The current planned rehearsal times for the Novemeber concert are now released. The current plan is to have a signle September rehearsal followed by several October rehearsals. Click below for the full details.</p>
 					</section>
 					<aside class="expiry-date">
-						<p>Expires: 30/11/20??</p>
+						<p>Expires: 30/11/2014</p>
 					</aside>
 					<a href="announcements/november_rehearsals.html"><button type="button" class="announce-btn">Go To Announcement</button></a>
 				</div>
@@ -75,7 +75,7 @@
 						<p class="announcement-info">All members are advised that the Annual General Meeting (AGM), will take place at Pimlico State High School Performing Arts Building, Fulham Road, Pimlico on Sunday 17th of May at 2pm. All members are welcome.</p>
 					</section>
 					<aside class="expiry-date">
-						<p>Expires: 30/09/20??</p>
+						<p>Expires: 30/09/2014</p>
 					</aside>
 					<a href="announcements/notice_of_agm2015.html"><button type="button" class="announce-btn">Go To Announcement</button></a>
 				</div>
