--- a/Report.html
+++ b/Report.html
@@ -44,11 +44,11 @@
 <p>brief details of who did what</p>
 <ul>
     <li><strong>Bradman: </strong> Did the majority of the work (90%+) for designing and creating the website. Created all the pages, organized all the content, complated the comps and site plan. </li>
-    <li><strong>Akintobi: </strong> Helped with the design and creation of the website (10%). Despite not doing as much he made it clear early on that he would not have much time to contribute and attended every meeting arranged and participated.</li>
-    <li><strong>Simranjeet: </strong> Little help, but not the noticeble contribution.</li>
+    <li><strong>Akintobi: </strong> Helped with the design and creation of the website (10%). Despite not doing as much he made it clear early on that he would not have much time to contribute and attended every meeting arranged and participated. Talked with Dianna about how I don't want Tobi to be penalized for his lesser contribution. She said thats fine and that I should add a note here and when I submit for Darcie saying not to penalize him - Bradman LD.</li>
+    <li><strong>Simranjeet: </strong> Discussed with Dianna and he is submitting separately. - BradmanLD</li>
 </ul>
 <h2>Testing Details</h2>
-<p> *Tobi I'll fill this out tomorrow after I've talked to Dianna. any details required to test the site, including instructions if needed, outstanding issues
+<p> Talked with Dianna about how I struggled to complete the assessment and she said that I should put a note here and upon submission saying that some of the content is not complete as a result. Incomplete aspects of the website include: the fact that there are only 5 events, the only report under the about us section that works or has content is 2013, and there is an "expired announcement" under newsfeed to show what the website would do with inactive announcements but it doesn't have any content or link anywhere. Additionally, the lack of time made it difficult to properly organize the content and as a result some of the content is for 2015 and assumes it is 2015, when other parts of the content assume its stil 2014. - BradmanLD.<br> any details required to test the site, including instructions if needed, outstanding issues
     (like things that look as though they work but don't)</p>
 <h2>References</h2>
 <p>references (links) for any code, images or content that you have used that are not your own</p>
@@ -58,10 +58,13 @@
     <li><strong>The galley slideshows were based on: </strong> <a href="https://www.w3schools.com/howto/howto_js_slideshow.asp">A w3school how to</a></li>
 </ul>
 <h2>PMI</h2>
+
+<p> As a team, the group brainstormed ideas which allows us as a group to focus on where and how to improve each situation the assignment would be faced with. After much consideration, the team was a able to come up with innovative ideas to develop the website, Thus allowing the group to create a website based on the information provided which reflects our intended target audience. - Tobi (Akintobi)</p>
+
 <p>your group should spend some time reflecting on the process and describe here the Pluses, Minuses and Interesting
     aspects of your teamwork process and result</p>
 <p><strong>Pluses: </strong> The way the team came together early on and decided on the preferred communication methods for each member. Additionally it was great how quickly Tobi (Akintobi) and I were able to organize meetings, which either of us didn't miss or were late to. - BradmanLD</p>
-<p><strong>Minuses: </strong> The fact that I was left alone to do the majority of the assessment as no one was contributing until the week each milestone was due at which point it was too late to change anything or reorganize the work for multiple people to contribute. There were also meetings early on were neither team memeber came prepared to discuss the assessment and quickly derailed the conversation leaving me to work on the assessment. - BradmanLD </p>
+<p><strong>Minuses: </strong> The fact that I was left alone to do the majority of the assessment as no one was contributing until the week each milestone was due at which point it was too late to change anything or reorganize the work for multiple people to contribute. There were also meetings early on were neither team memeber came prepared to discuss the assessment and quickly derailed the conversation leaving me to work on the assessment. Additionally, I am upset that the only burst of contact I really had with the other team members was when I uploaded my parts of the report and they were more concerned about the report and how me saying that they didn't contribute would effect their marks, despite clearly not being concerned enough about the marks to actually contribute. - BradmanLD </p>
 <p><strong>Interesting: </strong> The way Tobi (Akintobi) and I were able to communicate effectively over slack and text messages to ensure that while he didn't do as much work he certainly had a noticeable contribution. - BradmanLD</p>
 
 
