Fix broken footer events links, All sub folder pages had the wrong relative link

--- a/MILESTONE 2/artists.html
+++ b/MILESTONE 2/artists.html
@@ -61,7 +61,7 @@
 						<h3 class="name">Bronwyn Douglas</h3>
 						<p class="info">Bronwyn is a Mezzo-soprano who comes from Milton on the coast of NSW. She is currently the holder of the holder of the Amelia Joscelyne Memorial Scholarship with the Dame Nellie Melba Trust. Bronwyn graduated with a Masters in Operatic Performance from  the Queensland Conservatorium in 2014, also receiving . . .</p>
 					</div>
-					<a class="remove-link-lines" href="#"><div class="go-to-artist-btn">
+					<a class="remove-link-lines" href="artists/bronwyn_douglas.html"><div class="go-to-artist-btn">
 						<p>Visit the Artist's Page</p>
 					</div></a>
 				</div>
@@ -76,7 +76,7 @@
 						<h3 class="name">Raymond Yong</h3>
 						<p class="info">Raymond Yong was born in Malaysia, emigrating to Australia at the age of two. He received his initial musical  training in Perth, performing regularly in public piano recitals from an early age. It was in High School that he first took to the podium as a . . .</p>
 					</div>
-					<a class="remove-link-lines" href="#"><div class="go-to-artist-btn">
+					<a class="remove-link-lines" href="artists/raymond_yong.html"><div class="go-to-artist-btn">
 						<p>Visit the Artist's Page</p>
 					</div></a>
 				</div> <!-- End of Artist -->
@@ -88,7 +88,7 @@
 						<h3 class="name">Richard McIntyre</h3>
 						<p class="info">Richard McIntyre sustains a long and distinguished career as a bassoonist, music educator, conductor and arranger. He developed these skills as he spent over 25 years working with the ANU School of Music and is now one of Australia's most respected . . .</p>
 					</div>
-					<a class="remove-link-lines" href="#"><div class="go-to-artist-btn">
+					<a class="remove-link-lines" href="artists/richard_mcintyre.html"><div class="go-to-artist-btn">
 						<p>Visit the Artist's Page</p>
 					</div></a>
 				</div> <!-- End of Artist -->
@@ -103,7 +103,7 @@
 						<h3 class="name">Stefan Cassomenos</h3>
 						<p class="info">Melbourne pianist, conductor and composer Stefan Cassomenos gives regular solo recitals throughout Australia, and has appeared as a soloist in Europe and Asia. In 2012 he was a grand finalist in the Rhodes International Piano Competetion and . . .</p>
 					</div>
-					<a class="remove-link-lines" href="#"><div class="go-to-artist-btn">
+					<a class="remove-link-lines" href="artists/stefan_cassomenos.html"><div class="go-to-artist-btn">
 						<p>Visit the Artist's Page</p>
 					</div></a>
 				</div> <!-- End of Artist -->
@@ -115,7 +115,7 @@
 						<h3 class="name">Adam Lopez</h3>
 						<p class="info">Adam Lopez’s has performed backing vocals for famous artists such as Mariah Carey, Keith Urban, and The Coors. His phenomenal vocal range has led him to break two Guinness World Records. This has allowed him to appear all over the world . . .</p>
 					</div>
-					<a class="remove-link-lines" href="#"><div class="go-to-artist-btn">
+					<a class="remove-link-lines" href="artists/adam_lopez.html"><div class="go-to-artist-btn">
 						<p>Visit the Artist's Page</p>
 					</div></a>
 				</div> <!-- End of Artist -->
