--- a/MILESTONE 2/artists/adam_lopez.html
+++ b/MILESTONE 2/artists/adam_lopez.html
@@ -84,7 +84,7 @@
 							</div>
 							<div class="buttons">
 								<a href="../events/world_of_music.html"><button type="button">Learn More</button></a>
-								<a href="#"><img src="../button_images/ticket_shop_small.png" class="bottombutton"></a>
+								<img src="../button_images/ticket_shop_small.png" class="bottombutton">
 							</div>	<!-- End of Buttons -->
 						</div> 	<!-- End of Event -->
 					</section>	<!-- End of Performances -->				
