--- a/MILESTONE 2/artists/raymond_yong.html
+++ b/MILESTONE 2/artists/raymond_yong.html
@@ -119,7 +119,7 @@
 							<li><a href="../artists.html">Orchestra Artists</a></li>
 						</ul>
 					</li>	<!-- End of DropDown -->
-					<li><a href="events.html">Events</a></li>
+					<li><a href="../events.html">Events</a></li>
 					<li class="galleries">
 						<a href="#">Galleries &#9662;</a>
 						<ul class="dropdown">
