--- a/MILESTONE 2/events/world_of_music.html
+++ b/MILESTONE 2/events/world_of_music.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Richard McIntyre - Barrier Reef Orchestra</title>
+	<title>World of Music - Concert - Barrier Reef Orchestra</title>
 	<link href="../mainstyles.css" rel="stylesheet" type="text/css">
-	<link href="../artiststyles.css" rel="stylesheet" type="text/css">
+	<link href="../eventstyles.css" rel="stylesheet" type="text/css">
 	
 	<!-- Carousel -->
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
@@ -45,49 +45,18 @@
 		<nav id="breadcrumb">
 			<ul>
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="../artists.html">Our Team - Artists</a></li>
-				<li>Richard McIntyre</li>
+				<li><a href="../artists.html">Events</a></li>
+				<li>World of Music</li>
 			</ul>
 		</nav>
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
-			<section id="individual-artist">
-				<section id="image-name-role">
-					<h2>Richard McIntyre OAM</h2>
-					<img src="../artist_images/artist_overview/richard_mcintyre_large.jpg" width="280" height="225">
-					<h3>Conductor</h3>
-				</section>	<!-- End of Image Section -->
-				<article id="about-the-artist">
-					<section>
-						<h4 class="article-head">About Richard McIntyre OAM</h4>
-						<p>Richard McIntyre OAM, has maintained a long and distinguished career as a bassoonist, music educator, conductor and arranger. He developed these skills as he spent over 25 years working with the ANU School of Music ans is now of Australi'a most respected musical teachers, who places emphasis on developing strong one on one relationships with his students.</p>
-						<p>His work as a conductor is well-known, particually in Canberra. He was Conudctor and Musical Director of the Canberra Youth Orchestra from 1980 - 1990, creating a reputation that led to them touring across Europe. His Canberra contributon has included development of and much work with the School of Music Orchestra, Canberra Opera, Canberra Philharmonic Society, thirteen years as Musical Director of The Llewellyn Choir, and three years as Musical Director of the Oriana Chorale.</p>
-						<p>He has won several awards throughout his career including 1986 Canberran of the Year, Advance Australia, Sound Australian, and National Critics' Circle awards. In 1992 he was granted an Order of Australia Medal, for services to Music and Music Education, particually for his work with the Canberra Youth Orchestra.</p>
-						<p>His numerous conducting activities outside of Canberra include the foundation, development, and work with the <a href="../index.html">Barrier Reef Orchestra</a>, with which he still continues his association as Artistic Advisor and frequent conductor.</p>	
-					</section>
-					<section id="performances">
-						<h4 class="article-head">Richard's Barrier Reef Orchestra Performances</h4>
-						<div class="event even">
-							<div class="title-location-date">
-								<h3 class="title">Last Night of the Proms</h3>
-								<h4 class="location">Townsville Civic Theatre</h4>
-								<h4 class="date">Was 1st November, 2014</h4>
-							</div>
-							<div class="artists">
-								<h4>Special Guests</h4>
-								<ul>
-									<li><a href="richard_mcintyre.html">Richard McIntyre OAM</a></li>
-									<li><a href="http://nqomt.com.au/">The Company Singers - North Queensland Opera and Music Theatre Company </a></li>
-								</ul>
-							</div>
-							<div class="buttons">
-								<a href="../events/last_night_of_the_proms.html"><button type="button">Learn More</button></a>
-								<a href="../gallery/last_night_at_the_proms.html"><button type="button" class="bottombutton">View Event Gallery</button></a>
-							</div>	<!-- End of Buttons -->
-						</div> 	<!-- End of Event -->
-					</section>	<!-- End of Performances -->				
-				</article>		
+			<section id="program">
+				<h2>Concert Program</h2>
+			</section>
+			<section id="concert-info">
+				
 			</section>
 		</div>	<!-- End of Main -->
 		<div class="push"></div>
@@ -120,7 +89,7 @@
 							<li><a href="../artists.html">Orchestra Artists</a></li>
 						</ul>
 					</li>	<!-- End of DropDown -->
-					<li><a href="../events.html">Events</a></li>
+					<li><a href="events.html">Events</a></li>
 					<li class="galleries">
 						<a href="#">Galleries &#9662;</a>
 						<ul class="dropdown">
