--- a/MILESTONE 2/events/world_of_music.html
+++ b/MILESTONE 2/events/world_of_music.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>World of Music - Concert - Barrier Reef Orchestra</title>
+	<title>Last Night at the Proms - Barrier Reef Orchestra</title>
 	<link href="../mainstyles.css" rel="stylesheet" type="text/css">
 	<link href="../eventstyles.css" rel="stylesheet" type="text/css">
 	
@@ -46,18 +46,105 @@
 			<ul>
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../artists.html">Events</a></li>
-				<li>World of Music</li>
+				<li>Last Night at the Proms</li>
 			</ul>
 		</nav>
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
-			<section id="program">
-				<h2>Concert Program</h2>
-			</section>
-			<section id="concert-info">
-				
-			</section>
+			<div id="concert">
+				<h2>Last Night at the Proms</h2>
+				<section id="overview">
+					<section id="program">
+						<h3>Concert Program</h3>
+						<section id="ralph" class="program-section">
+							<h4>Ralph Vaughan Williams:</h4>
+							<ul>
+								<li>Overture to the Wasps</li>
+								<li>English Folk Song Suite</li>
+								<li>March: Seventeen Come Sunday</li>
+								<li>Intermezzo: My Bony Boy</li>
+								<li>March: Folk Songs from Somerset</li>
+								<li>Cantana: In Windsore Forest</li>
+								<li>The Conspiracy</li>
+								<li>Drinking Song</li>
+								<li>Falstaff and the Fairies</li>
+								<li>Wedding Chorus</li>
+								<li>Epilogue</li>
+							</ul>
+						</section>	<!-- End of Ralph Section -->	
+						<section id="george" class="program-section">
+							<h4>George Frideric Handel:</h4>
+							<ul>
+								<li>Excerpts: The Messiah</li>
+								<li>Overture</li>
+								<li>Recitative: Comfort ye my people</li>
+								<li>Air: Ev'ry valley shall be exalted</li>
+								<li>Chorus: And the Glory of the Lord</li>
+								<li>Recitative: Then Shall the Eyes of the Blind be Opened</li>
+								<li>Air: He Shall Feed his Flock like a Shepard</li>
+								<li>Chorus: All We Like Sheep Have Gone Astray</li>
+								<li>Chorus: Hellelujah!</li>
+							</ul>
+						</section>	<!-- End of George Section -->
+					</section>	<!-- End of Program -->
+					<section id="conductor">
+						<h3>Conductor</h3>
+						<a href="../artists/richard_mcintyre.html"><p>Richard McIntyre</p></a>
+					</section>
+					<section id="special-guests">
+						<h3>Special Guests &amp; Soloists</h3>
+						<ul>
+							<li><a href="http://nqomt.com.au/">The Company Singers - North Queensland Opera and Music Theatre Company </a></li>
+						</ul>
+					</section>
+					<section id="orchestra-members">
+						<h3>Orchestra Roles</h3>
+						<ul class="special-roles">
+							<li><strong>Rehearsal Conductor: </strong>Ben Fixter, Suzanne Darrigan, Andrew Ryder</li>
+							<li><strong>Concert Master: </strong>Stephen Frewen-Lord</li>
+						</ul>
+						<ul class="all-roles">
+							<li><strong>Violin 1: </strong> Stephen Frewen-Lord, Margot Doherty, Kimerley Riskas, Jasmine Martin, Tracey Cook, Satashi Siratsuchi, Carla Littlefield, Fiona Hu</li>
+							<li><strong>Violin 2: </strong>Alexandra Gorton, Jess Regan (Melbourne), Julia Maurus (Cairns), Sophie Gregory, Suva Leitch, Bianca Bachiella, Erin Darrigan</li>
+							<li><strong>Viola: </strong>Danielle Bijl, Cortney Husodo, Aidan Fitzgerald, Emily Matthews, Bethany Waller</li>
+							<li><strong>Cello: </strong>Rachel Lind, Caroline Arlett, Maragret Loftus, Samuel Yick, Skye-Tara Lewis, Rachel Hill, Zali Clark</li>
+							<li><strong>Double Bass: </strong>Phil Honey, Olivias Adcock, Maureen Wallace, Emma Wooton</li>
+							<li><strong>Flute/Piccolo: </strong>Manuela Wellbach</li>
+							<li><strong>Oboe: </strong>Bernie Girard (Brisbane), Georgina Kanowski</li>
+							<li><strong>Clarinet: </strong>Jacinta Payne, Rianta Belford</li>
+							<li><strong>Bassoon :</strong>Carl Bryant, Helen Land</li>
+							<li><strong>Horn: </strong>Andrew Ryder, Adan Gabriels (Brisbane), Suzanne Darrigan, James Bradley (Brisbane)</li>
+							<li><strong>Trumpet: </strong>Derek Larsen, Claire Dickson, Sea Wong-Jang</li>
+							<li><strong>Trombone: </strong>Dylan Troyahn, Sharon Casey, Mark Land</li>
+							<li><strong>Tuba: </strong>Andrew Hodgson</li>
+							<li><strong>Harp: </strong>Leah Li</li>
+							<li><strong>Keyboard: </strong>Craig Land, Ruby Ansic</li>
+							<li><strong>Timpani: </strong>Noel Price</li>
+							<li><strong>Percussion: </strong>Ruby Ansic, Nathan Tipping</li>
+						</ul>
+					</section>
+				</section>
+				<section id="concert-info-side">
+					<section id="location-date">
+						<h3>Location &amp; Date</h3>
+						<ul>
+							<li>Townsville Civic Theatre</li>
+							<li>Was Saturday 1st Novemeber, 2014</li>
+						</ul>
+					</section>	<!-- End of Location and Date -->
+					<section>
+						<h3>Ticket Prices</h3>
+						<ul>
+							<li>Adults: $38</li>
+							<li>Conession: $34</li>
+							<li>Members: $32</li>
+							<li>Students: $15</li>
+						</ul>
+						<img src="../button_images/ticket_shop_small.png">
+					</section>	<!-- End of Ticket Info -->
+				</section>	<!-- End of Concert Info -->
+			</div>	<!-- End of Concert -->
 		</div>	<!-- End of Main -->
 		<div class="push"></div>
 	</div>	<!-- End of Container -->
