Add event page, Fix broken links

--- a/MILESTONE 2/artists/stefan_cassomenos.html
+++ b/MILESTONE 2/artists/stefan_cassomenos.html
@@ -81,7 +81,8 @@
 								</ul>
 							</div>
 							<div class="buttons">
-								<a href="../events/masterworks.html"><button type="button">Learn More</button></a>
+							<!-- The only event with content is Last night at the proms -->
+								<a href="#"><button type="button">Learn More</button></a>
 								<a href="#"><button type="button" class="bottombutton">Event Has No Gallery</button></a>
 							</div>	<!-- End of Buttons -->
 						</div> 	<!-- End of Event -->
