--- a/MILESTONE 2/contact_us.html
+++ b/MILESTONE 2/contact_us.html
@@ -90,7 +90,8 @@
 			<h2>FAQ (Frequently Asked Questions)</h2>
 			<aside class="question-and-answer">
 				<h3>Where can I find the upcoming event's information?</h3>
-				<p>The upcoming event page can be found <a href="#"><span class="emphasis">here</span></a>.</p>
+				<!-- This would link to the upcoming concerts page directly but the only concert with content atm is Last Night at the Proms -->
+				<p>The upcoming event page can be found <a href="events.html"><span class="emphasis">here</span></a>.</p>
 			</aside>
 			<aside class="question-and-answer">
 				<h3>How can I buy a ticket for the upcoming event?</h3>
@@ -98,15 +99,15 @@
 			</aside>
 			<aside class="question-and-answer">
 				<h3>How do I become a member?</h3>
-				<p>You can become a member using <a href="#"><span class="emphasis">this form</span></a>.</p>
+				<p>You can become a member using <a href="forms/membership_form.html"><span class="emphasis">this form</span></a>.</p>
 			</aside>
 			<aside class="question-and-answer">
 				<h3>How do I become a benefactor?</h3>
-				<p>You can become a benefactor using <a href="#"><span class="emphasis">this form</span></a>.</p>
+				<p>You can become a benefactor using <a href="forms/benefactors_form.html"><span class="emphasis">this form</span></a>.</p>
 			</aside>
 			<aside class="question-and-answer">
 				<h3>How do I apply to join the Orchestra?</h3>
-				<p>You can apply to join using <a href="#"><span class="emphasis">this form</span></a>.</p>
+				<p>You can apply to join using <a href="forms/join_the_orchestra_form.html"><span class="emphasis">this form</span></a>.</p>
 			</aside>
 		</section>
 		</div>	<!-- End of Main -->
