--- a/MILESTONE 2/events.html
+++ b/MILESTONE 2/events.html
@@ -51,7 +51,8 @@
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
-			<!-- There would be links to every conductor / special guest but I've only done links for pages that actually currently exist -->
+			<!-- There would be links to every conductor / special guest but I've only done the links for pages that actually currently exist -->
+			<!-- The Only Link with content is the last night at the proms -->
 			<section id="upcoming-event">
 			    <h2>Upcoming Event</h2>
 			    <div class="event" id="world-of-music">
@@ -74,7 +75,8 @@
 						</ul>
 					</div>
 					<div class="buttons">
-						<a href="events/world_of_music.html"><button type="button">Learn More</button></a>
+						<!-- The Only Link with content is the last night at the proms -->
+						<a href="#"><button type="button">Learn More</button></a>
 						<img src="button_images/ticket_shop.png" alt="Tickets Available at Ticketshop - Riverway Art Centre / Townsville Civic Theatre" title="TicketShop" width="366" height="70">
 					</div>	<!-- End of Buttons -->
 				</div> 	<!-- End of Event -->
@@ -100,7 +102,7 @@
 						</ul>
 					</div>
 					<div class="buttons">
-						<a href="events/world_of_music.html"><button type="button">Learn More</button></a>
+						<a href="#"><button type="button">Learn More</button></a>
 						<button type="button" class="bottombutton">Event Has No Gallery</button>
 					</div>	<!-- End of Buttons -->
 				</div> 	<!-- End of Event -->
@@ -122,7 +124,7 @@
 						</ul>
 					</div>
 					<div class="buttons">
-						<a href="events/world_of_music.html"><button type="button">Learn More</button></a>
+						<a href="events/last_night_at_the_proms.html"><button type="button">Learn More</button></a>
 						<a href="gallery/last_night_at_the_proms.html"><button type="button" class="bottombutton">View Event Gallery</button></a>
 					</div>	<!-- End of Buttons -->
 				</div> 	<!-- End of Event -->
@@ -144,7 +146,7 @@
 						</ul>
 					</div>
 					<div class="buttons">
-						<a href="events/world_of_music.html"><button type="button">Learn More</button></a>
+						<a href="#"><button type="button">Learn More</button></a>
 						<button type="button" class="bottombutton">Event Has No Gallery</button>
 					</div>	<!-- End of Buttons -->
 				</div> 	<!-- End of Event -->
