--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -102,9 +102,10 @@
 						</ul>
 					</section>	<!-- End of Special Guests -->
 				</div>
-				<a class="remove-link-lines" href="google.com" ><div id="next-con-learn-more">
+				<!-- The only event with content is Last night at the proms -->
+				<a class="remove-link-lines" href="#" ><button id="next-con-learn-more">
 					<p>LEARN MORE</p>
-					</div></a>
+					</button></a>
 				<img src="button_images/ticket_shop.png" class="ticketShop" alt="Tickets Available at Ticketshop - Riverway Art Centre / Townsville Civic Theatre" title="TicketShop" width="366" height="70">
 			</section>	<!-- End of Upcoming Concert -->
 			<div id="second-col-set">
@@ -133,7 +134,7 @@
 						<h3 id="home-artist-name">Bronwyn Douglas</h3>
 						<p>Bronwyn graduated with a Masters in Operatic Performance from the Queensland Conservatorium Griffith University in 2014, also receiving an award for academic excellence and the Wagner Society in Queensland Encouragement Award. She attended the Lisa Gasteen National Opera School from 2013-2015 and the Mediterranean Opera Summer Program held in Caltagirone, Sicily in 2014...</p>
 					</div>
-					<a class="remove-link-lines" href="ARTISTPAGE"><div id="home-go-to-artist">
+					<a class="remove-link-lines" href="artists/bronwyn_douglas.html"><div id="home-go-to-artist">
 						<p>Click Here to go to Bronwyn's Page</p>
 					</div></a> 
 				</section>	<!-- End of Featured Artist -->
