--- a/MILESTONE 2/artists/adam_lopez.html
+++ b/MILESTONE 2/artists/adam_lopez.html
@@ -83,7 +83,8 @@
 								</ul>
 							</div>
 							<div class="buttons">
-								<a href="../events/world_of_music.html"><button type="button">Learn More</button></a>
+								<!-- The only event with content is Last night at the proms -->
+								<a href="#"><button type="button">Learn More</button></a>
 								<img src="../button_images/ticket_shop_small.png" class="bottombutton">
 							</div>	<!-- End of Buttons -->
 						</div> 	<!-- End of Event -->
