Fix the img width /heights of sponsors

--- a/MILESTONE 2/committee_and_supporters.html
+++ b/MILESTONE 2/committee_and_supporters.html
@@ -184,16 +184,16 @@
 			<div class="footerline"></div> <!-- Line for the top of Footer -->
 			<div class="container">
 				<h6 class="footer-title">SPONSORS</h6>
-				<img id="majorsponsor" src="sponsor_logos/townsville_city_council_blue.png" title="Townsville City Council" alt="Townsville City Council Logo" height="100px" width="100px">
+				<a href="https://www.townsville.qld.gov.au/"><img id="majorsponsor" src="sponsor_logos/townsville_city_council_blue.png" title="Townsville City Council" alt="Townsville City Council Logo" height="100" width="100"></a>
 				<section class="sponsors slider">
-					<div class="slide"><img src="sponsor_logos/acvc.png" height="100px" width="154px" alt="Australian Concert and Vocal Competition Logo"></div>
-					<div class="slide"><img src="sponsor_logos/bunnings.png" height="100px" width="154px" alt="Bunnings Warehouse Logo"></div>
-					<div class="slide"><img src="sponsor_logos/signs_of_excellence.png" height="100px" width="154px" alt="Signs of Excellence Logo"></div>
-					<div class="slide"><img src="sponsor_logos/afcm.png" height="100px" width="154px" alt="Australian Festival of Chamber Music Logo"></div>
-					<div class="slide"><img src="sponsor_logos/groovy_graphics.png" height="100px" width="154px" alt="Groovy Graphics Logo"></div>
-					<div class="slide"><img src="sponsor_logos/keyboard_shop.png" height="100px" width="154px" alt="Keyboard Shop Logo"></div>
-					<div class="slide"><img src="sponsor_logos/kaptiv_media.png" height="100px" width="154px" alt="Kaptiv Media Logo"></div>
-					<div class="slide"><img src="sponsor_logos/cowboys_league_club.png" height="100px" width="154px" alt="Cowboys Leagues Club Logo"></div>
+					<div class="slide"><a href="http://acvc.com.au/"><img src="sponsor_logos/acvc.png" height="100" width="154" alt="Australian Concert and Vocal Competition Logo"></a></div>
+					<div class="slide"><a href="https://www.bunnings.com.au/"><img src="sponsor_logos/bunnings.png" height="100" width="154" alt="Bunnings Warehouse Logo"></a></div>
+					<div class="slide"><a href="http://www.signsofexcellence.com.au/"><img src="sponsor_logos/signs_of_excellence.png" height="100" width="154" alt="Signs of Excellence Logo"></a></div>
+					<div class="slide"><a href="https://www.afcm.com.au/"><img src="sponsor_logos/afcm.png" height="100" width="154" alt="Australian Festival of Chamber Music Logo"></a></div>
+					<div class="slide"><a href="http://groovygraphicsandsigns.com.au/"><img src="sponsor_logos/groovy_graphics.png" height="100" width="154" alt="Groovy Graphics Logo"></a></div>
+					<div class="slide"><a href="https://www.thekeyboardshop.com.au/"><img src="sponsor_logos/keyboard_shop.png" height="100" width="154" alt="Keyboard Shop Logo"></a></div>
+					<div class="slide"><a href="https://www.yellowpages.com.au/qld/townsville/kaptiv-media-14056028-listing.html"><img src="sponsor_logos/kaptiv_media.png" height="100" width="154" alt="Kaptiv Media Logo"></a></div>
+					<div class="slide"><a href="https://cowboysleagues.com.au/"><img src="sponsor_logos/cowboys_league_club.png" height="100" width="154" alt="Cowboys Leagues Club Logo"></a></div>
 				</section> <!-- End of Sponsor Slider -->
 			</div>	<!-- End of Sponsor div -->
 			<div id="footer-nav" class="nav">
